--- a/server/model-config.json
+++ b/server/model-config.json
@@ -21,22 +21,22 @@
     "public": false
   },
   "ACL": {
-    "dataSource": "db",
+    "dataSource": "MongoDB",
     "public": false
   },
   "RoleMapping": {
-    "dataSource": "db",
+    "dataSource": "MongoDB",
     "public": false,
     "options": {
       "strictObjectIDCoercion": true
     }
   },
   "Role": {
-    "dataSource": "db",
+    "dataSource": "MongoDB",
     "public": false
   },
   "dishes": {
-    "dataSource": "db",
+    "dataSource": "MongoDB",
     "public": true
   }
 }
