adding customer model and access control

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -38,5 +38,9 @@
   "dishes": {
     "dataSource": "MongoDB",
     "public": true
+  },
+  "Customer": {
+    "dataSource": "MongoDB",
+    "public": true
   }
 }
